# NutriCheck

./: .gitignore  README.md  pyproject.toml
src/nutri_app/routes/: alimentos_routes.py  login_routes.py  refeicoes_routes.py
src/nutri_app/static/js/: refeicoes.js
src/nutri_app/utils/: email_token.py  importar_alimentos.py
