[tool.poetry]
name = "nutri-app"
version = "0.1.0"
description = ""
authors = ["Vinícius Pinto Gonçalves <vinip8372@gmail.com>"]
readme = "README.md"
packages = [{ include = "nutri_app", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12"
bcrypt = ">=4.3.0,<5.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
flask = "^3.0.0"
flask_sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.2"
flask-bcrypt = "^1.0.1"
flask-login = "^0.6.3"
pymysql = "^1.1.1"
email-validator = "^2.2.0"
requests = "^2.32.4"
gunicorn = "^25.0.1"
itsdangerous = "^2.2.0"
resend = "^2.27.0"
pandas = "^3.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

